--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -52,9 +52,8 @@
     "    * . . .\n",
     "  * **`TMP`**\n",
     "    * `basisImage01cal_check.png`\n",
-    "    * `image000001cal_check.png`\n",
-    "    * `image000001_checkplw.png`\n",
-    "    * `image000001plw_check.png`\n",
+    "    * `basisImage01_checkplw.png`\n",
+    "    * `basisImage01plw_check.png`\n",
     "    * . . .\n",
     "\n",
     "The local modules of `UBasic` are located in the **`ubasic`** folder.\n",
