--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -9,7 +9,7 @@
     "`UBasic` is an open source software written in Python for manual image calibration.\n",
     "\n",
     "### Description\n",
-    "The program is aimed to obtain the image calibration from a set on control points. The result of the process is the intrinsic camera parameters and the extrinsic parameters for each individual image. In addition, planviews can be generated for each image. A code to verify the quality of the GCPs used in the manual calibration of the images is also provided. The development of this software is suitable for images from any source, in particular from Argus-type video monitoring stations or drones. Details about the algorithm and methodology are described in\n",
+    "The program is aimed to obtain the image calibration from a set of Ground Control Points (GCP) and, optionally, the Horizon Points (HP). The result of the process is the intrinsic and extrinsic parameters for each individual image. In addition, planviews can be generated for each image. A code to verify the quality of the GCPs used in the manual calibration of the images is also provided. The development of this software is suitable for images from any source, in particular from Argus-type video monitoring stations or drones. Details about the algorithm and methodology are described in\n",
     "> *Simarro, G.; Calvete, D.; Souto, P.; Guillen, J. Camera Calibration for Coastal Monitoring Using\n",
     "Available Snapshot Images. Remote Sens. 2020, 12, 1840; https://doi.org/doi:10.3390/rs12111840*\n",
     "\n",
@@ -58,10 +58,10 @@
     "\n",
     "The local modules of `UBasic` are located in the **`ubasic`** folder.\n",
     "\n",
-    "To run the demo in the folder **`example`** with the basis of images in **`basis`** using a Jupyter Notebook we provide the file `example_notebook.ipynb`. For experienced users, the `example.py` file can be run in a terminal. `UCalib` handles `PNG` (recommended) and `JPEG` image formats.\n",
+    "To run the demo in the folder **`example`** with the basis of images in **`basis`** using a Jupyter Notebook we provide the file `example_notebook.ipynb`. For experienced users, the `example.py` file can be run in a terminal. `UBasic` handles `PNG` (recommended) and `JPEG` image formats.\n",
     "\n",
     "## Image calibration\n",
-    "To manually calibrate the images placed in the folder **`basis`**,  it is necessary that each image `<basisImage>.png` is supplied with a file containing the Ground Control Points (GCP) and, optionally, the Horizon Points (HP). The structure of each of these files is the following:\n",
+    "To manually calibrate the images placed in the folder **`basis`**,  it is necessary that each image `<basisImage>.png` is supplied with a file containing the Ground Control Points (GCP) and, optionally, a file with the Horizon Points (HP). The structure of each of these files is the following:\n",
     "* `<basisImage>cdg.txt`: For each GCP one line with  (minimum 6)\n",
     ">`pixel-column`, `pixel-row`, `x-coordinate`, `y-coordinate`, `z-coordinate`\n",
     "* `<basisImage>cdh.txt`: For each HP one line with (minimum 3)\n",
@@ -196,12 +196,12 @@
     "| Lens radial distortion (parabolic, quartic) | `k1a`, `k2a` | _-_ |\n",
     "| Lens tangential distortion (parabolic, quartic) | `p1a`, `p2a` | _-_ |\n",
     "| Pixel size | `sc`, `sr` | _-_ |\n",
-    "| Decentering | `oc`, `rr` | _pixel_ |\n",
+    "| Decentering | `oc`, `or` | _pixel_ |\n",
     "| Image size | `nc`, `nr` | _pixel_ |\n",
     "| Calibration error | `errorT`| _pixel_ |\n",
     "\n",
-    "In case an image is to be calibrated by setting certain parameters listed above, a `<basisImage>par.txt` in the **`basis`** folder must be provided with the specific parameter values. The structure of this file is the following:\n",
-    "* `<basisImage>par.txt`: For each calibration parameter one line with \n",
+    "In case an image is to be calibrated by forcing values for certain of the parameters listed above, a `<basisImage>par.txt` in the **`basis`** folder must be provided with the specific parameter values. The structure of this file is the following:\n",
+    "* `<basisImage>par.txt`: For each forced calibration parameter one line with \n",
     "> `value`, _`parameter_name`_\n",
     "\n",
     "## Planviews\n",
