--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -46,7 +46,7 @@
     "    * `basisImage01cdg.txt`\n",
     "    * . . .\n",
     "  * **`planviews`**\n",
-    "    * `crxyz_planviews.txt`\n",
+    "    * `crxyz_planview.txt`\n",
     "    * `xy_planview.txt`\n",
     "    * `basisImage01plw.png`\n",
     "    * . . .\n",
